crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__bound_arity.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- trial ANF input\\n{}\\n--- trial folded Core\\n{}\\n--- trial cleaned Core\\n{}\\n--- trial UPLC before\\n{}\\n--- trial UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let subject#1 : @constr[0](int, int) = constr 0 21 22 in
case@Tag subject#1 of
  0 x#2 -> x#2
--- unoptimized UPLC
(program 1.1.0
  [(lam subject_1 (case subject_1 (lam x_2 x_2)))
    (constr 0 (con integer 21) (con integer 22))])
--- optimized Core
let subject#3 : @constr[0](int, int) = constr 0 21 22 in
case@Tag subject#3 of
  0 x#4 -> x#4
--- optimized UPLC
(program 1.1.0
  [(lam subject_1 (case subject_1 (lam x_2 x_2)))
    (constr 0 (con integer 21) (con integer 22))])
--- isolated pass
--- trial ANF input
let subject#1 : @constr[0](int, int) = constr 0 21 22 in
case@Tag subject#1 of
  0 x#2 -> x#2
--- trial folded Core
let subject#1 : @constr[0](int, int) = constr 0 21 22 in
case@Tag subject#1 of
  0 x#2 -> x#2
--- trial cleaned Core
let subject#1 : @constr[0](int, int) = constr 0 21 22 in
case@Tag subject#1 of
  0 x#2 -> x#2
--- trial UPLC before
(program 1.1.0
  [(lam subject_1 (case subject_1 (lam x_2 x_2)))
    (constr 0 (con integer 21) (con integer 22))])
--- trial UPLC after
(program 1.1.0
  [(lam subject_1 (case subject_1 (lam x_2 x_2)))
    (constr 0 (con integer 21) (con integer 22))])
--- result
error: NonFunctionApplication(Con(Integer(22)), Con(Integer(21)))
--- logs
[]
