crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__bound_cold_fields.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- trial ANF input\\n{}\\n--- trial folded Core\\n{}\\n--- trial cleaned Core\\n{}\\n--- trial UPLC before\\n{}\\n--- trial UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let subject#1 : @constr[0](int, int) = constr 0 (trace "first" in 7) (trace "second" in 8) in
case@Bool false of
  True -> case@Tag subject#1 of
    0 ignored#2 ignored#3 -> trace "cold" in 0
  False -> trace "chosen" in 42
--- unoptimized UPLC
(program 1.1.0
  [(lam subject_1
    (case
      (con bool False)
      (force
        [[(force (builtin trace)) (con string "chosen")] (delay (con integer 42))])
      (case
        subject_1
        (lam ignored_2
          (lam ignored_3
            (force [[(force (builtin trace)) (con string "cold")] (delay (con integer 0))]))))))
    (constr 0
      (force [[(force (builtin trace)) (con string "first")] (delay (con integer 7))])
      (force
        [[(force (builtin trace)) (con string "second")] (delay (con integer 8))]))])
--- optimized Core
let anf#7 : int = trace "first" in 7 in
let anf#8 : int = trace "second" in 8 in
trace "chosen" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam anf_1
      [(lam anf_2 (force [[builtin_3 (con string "chosen")] (delay (con integer 42))]))
        (force [[builtin_3 (con string "second")] (delay (con integer 8))])])
      (force [[builtin_3 (con string "first")] (delay (con integer 7))])])
    (force (builtin trace))])
--- isolated pass
--- trial ANF input
let anf#4 : int = trace "first" in 7 in
let anf#5 : int = trace "second" in 8 in
let subject#1 : @constr[0](int, int) = constr 0 anf#4 anf#5 in
case@Bool false of
  True -> case@Tag subject#1 of
    0 ignored#2 ignored#3 -> trace "cold" in 0
  False -> trace "chosen" in 42
--- trial folded Core
let anf#4 : int = trace "first" in 7 in
let anf#5 : int = trace "second" in 8 in
let subject#1 : @constr[0](int, int) = constr 0 anf#4 anf#5 in
case@Bool false of
  True -> let ignored#2 : int = anf#4 in
  let ignored#3 : int = anf#5 in
  trace "cold" in 0
  False -> trace "chosen" in 42
--- trial cleaned Core
let anf#4 : int = trace "first" in 7 in
let anf#5 : int = trace "second" in 8 in
trace "chosen" in 42
--- trial UPLC before
(program 1.1.0
  [(lam anf_4
    [(lam anf_5
      [(lam subject_1
        (case
          (con bool False)
          (force
            [[(force (builtin trace)) (con string "chosen")] (delay (con integer 42))])
          (case
            subject_1
            (lam ignored_2
              (lam ignored_3
                (force [[(force (builtin trace)) (con string "cold")] (delay (con integer 0))]))))))
        (constr 0 anf_4 anf_5)])
      (force
        [[(force (builtin trace)) (con string "second")] (delay (con integer 8))])])
    (force [[(force (builtin trace)) (con string "first")] (delay (con integer 7))])])
--- trial UPLC after
(program 1.1.0
  [(lam anf_4
    [(lam anf_5
      (force
        [[(force (builtin trace)) (con string "chosen")] (delay (con integer 42))]))
      (force
        [[(force (builtin trace)) (con string "second")] (delay (con integer 8))])])
    (force [[(force (builtin trace)) (con string "first")] (delay (con integer 7))])])
--- result
(con integer 42)
--- logs
["first", "second", "chosen"]
