crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__bound_default.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(before), pretty(after))"
---
--- before
let subject#4 : @constr[0]() = constr 0 in
case@Tag subject#4 of
  0 -> 42
  _ -> 0
--- after
let subject#4 : @constr[0]() = constr 0 in
case@Tag subject#4 of
  0 -> 42
  _ -> 0
--- errors
InvalidCase("tag defaults must be expanded using constructor arities")
InvalidCase("tag defaults must be expanded using constructor arities")
