crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__bound_function_capture.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- trial ANF input\\n{}\\n--- trial folded Core\\n{}\\n--- trial cleaned Core\\n{}\\n--- trial UPLC before\\n{}\\n--- trial UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let subject#1 : @constr[0](int) = constr 0 (trace "field" in 42) in
(\ignored#3 : int -> case@Tag subject#1 of
  0 x#2 -> x#2) 0
--- unoptimized UPLC
(program 1.1.0
  [(lam subject_1 [(lam ignored_3 (case subject_1 (lam x_2 x_2))) (con integer 0)])
    (constr 0
      (force
        [[(force (builtin trace)) (con string "field")] (delay (con integer 42))]))])
--- optimized Core
let anf#7 : int = trace "field" in 42 in
let subject#4 : @constr[0](int) = constr 0 anf#7 in
case@Tag subject#4 of
  0 x#6 -> x#6
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam anf_1 [(lam subject_2 (case subject_2 (lam x_3 x_3))) (constr 0 anf_1)])
      (force [[builtin_4 (con string "field")] (delay (con integer 42))])])
    (force (builtin trace))])
--- isolated pass
--- trial ANF input
let anf#4 : int = trace "field" in 42 in
let subject#1 : @constr[0](int) = constr 0 anf#4 in
(\ignored#3 : int -> case@Tag subject#1 of
  0 x#2 -> x#2) 0
--- trial folded Core
let anf#4 : int = trace "field" in 42 in
let subject#1 : @constr[0](int) = constr 0 anf#4 in
(\ignored#3 : int -> let x#2 : int = anf#4 in
x#2) 0
--- trial cleaned Core
trace "field" in 42
--- trial UPLC before
(program 1.1.0
  [(lam anf_4
    [(lam subject_1 [(lam ignored_3 (case subject_1 (lam x_2 x_2))) (con integer 0)])
      (constr 0 anf_4)])
    (force
      [[(force (builtin trace)) (con string "field")] (delay (con integer 42))])])
--- trial UPLC after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "field")] (delay (con integer 42))]))
--- result
(con integer 42)
--- logs
["field"]
