crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__bound_ignored_failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- trial ANF input\\n{}\\n--- trial folded Core\\n{}\\n--- trial cleaned Core\\n{}\\n--- trial UPLC before\\n{}\\n--- trial UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let subject#6 : @constr[0](int, int) = constr 0 (trace "first" in error) (trace "second" in 8) in
case@Bool false of
  True -> case@Tag subject#6 of
    0 ignored#7 ignored#8 -> trace "cold" in 0
  False -> trace "chosen" in 42
--- unoptimized UPLC
(program 1.1.0
  [(lam subject_6
    (case
      (con bool False)
      (force
        [[(force (builtin trace)) (con string "chosen")] (delay (con integer 42))])
      (case
        subject_6
        (lam ignored_7
          (lam ignored_8
            (force [[(force (builtin trace)) (con string "cold")] (delay (con integer 0))]))))))
    (constr 0
      (force [[(force (builtin trace)) (con string "first")] (delay (error))])
      (force
        [[(force (builtin trace)) (con string "second")] (delay (con integer 8))]))])
--- optimized Core
let anf#4 : int = trace "first" in error in
let anf#5 : int = trace "second" in 8 in
trace "chosen" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam anf_1
      [(lam anf_2 (force [[builtin_3 (con string "chosen")] (delay (con integer 42))]))
        (force [[builtin_3 (con string "second")] (delay (con integer 8))])])
      (force [[builtin_3 (con string "first")] (delay (error))])])
    (force (builtin trace))])
--- isolated pass
--- trial ANF input
let anf#9 : int = trace "first" in error in
let anf#10 : int = trace "second" in 8 in
let subject#6 : @constr[0](int, int) = constr 0 anf#9 anf#10 in
case@Bool false of
  True -> case@Tag subject#6 of
    0 ignored#7 ignored#8 -> trace "cold" in 0
  False -> trace "chosen" in 42
--- trial folded Core
let anf#9 : int = trace "first" in error in
let anf#10 : int = trace "second" in 8 in
let subject#6 : @constr[0](int, int) = constr 0 anf#9 anf#10 in
case@Bool false of
  True -> let ignored#7 : int = anf#9 in
  let ignored#8 : int = anf#10 in
  trace "cold" in 0
  False -> trace "chosen" in 42
--- trial cleaned Core
let anf#9 : int = trace "first" in error in
let anf#10 : int = trace "second" in 8 in
trace "chosen" in 42
--- trial UPLC before
(program 1.1.0
  [(lam anf_9
    [(lam anf_10
      [(lam subject_6
        (case
          (con bool False)
          (force
            [[(force (builtin trace)) (con string "chosen")] (delay (con integer 42))])
          (case
            subject_6
            (lam ignored_7
              (lam ignored_8
                (force [[(force (builtin trace)) (con string "cold")] (delay (con integer 0))]))))))
        (constr 0 anf_9 anf_10)])
      (force
        [[(force (builtin trace)) (con string "second")] (delay (con integer 8))])])
    (force [[(force (builtin trace)) (con string "first")] (delay (error))])])
--- trial UPLC after
(program 1.1.0
  [(lam anf_9
    [(lam anf_10
      (force
        [[(force (builtin trace)) (con string "chosen")] (delay (con integer 42))]))
      (force
        [[(force (builtin trace)) (con string "second")] (delay (con integer 8))])])
    (force [[(force (builtin trace)) (con string "first")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["first"]
